# django-full-setup

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml
.env-example/: dev.env  prod.env
django-app/: .gitignore  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
django-app/demo/: settings.py  urls.py
nginx/: Dockerfile
nginx/conf.d/: default.conf
nginx/html/main/: index.html
